# MultiFormat

./: .gitignore  CMakeLists.txt  README.md
include/: csv.c  csv.h  json.c  json.h  xml.c  xml.h
src/core/: data_types.h
src/csv/: csv_parser.c  csv_parser.h
src/json/: json_parser.c  json_parser.h  json_serializer.c  json_serializer.h
src/xml/: xml_help.c  xml_help.h  xml_parser.c  xml_parser.h  xml_serializer.c  xml_serializer.h
tests/: CMakeLists.txt
tests/src/: csv_test.c  json_test.c  test_common.c  test_common.h  tests.h
